--- a/project/After_login_pages/after_login_payment/AL_payment_1.html
+++ b/project/After_login_pages/after_login_payment/AL_payment_1.html
@@ -24,8 +24,8 @@
         </div>
         <div class="profile_logo">
         
-            <div class="profile_name">
-                KARTHIKEYAN
+            <div class="profile_name" id="user_name">
+                <!-- KARTHIKEYAN -->
             </div>
             <a href="../../our profile/our_profile.html">
                 <div class="logo_profile">
@@ -39,8 +39,8 @@
     <body>
 
         <sevtion class="profile_heading">
-            <h1 class="heading">
-                Help Sportsman Adithya Who Was Stabbed Multiple Times
+            <h1 class="heading" id="title_card"> 
+                <!-- Help Sportsman Adithya Who Was Stabbed Multiple Times -->
             </h1>
 
         </sevtion>
@@ -143,10 +143,10 @@
                     </p>
                 </div>
                 <div class="right_row_8">
-                    <a class="" href="../../payment login page/card_details.html">    
-                        <button class="contribute_button">
-                            <img src="../../assets/images/get-money.png" alt="image" class="" height="30px" width="25px">
-                            <b class="contribute">CONTRIBUTE</b>
+                    <a class="" href="../../after_login_payment/AL_payment_1.html">    
+                        <button class="contribute_button" type="submit" >
+                            <!-- <img src="../../assets/images/get-money.png" alt="image" class="" height="30px" width="25px"> -->
+                            <b class="contribute">DONATE</b>
                         </button>
                     </a>
                 </div>
@@ -198,6 +198,18 @@
 
             </footer>
         </section>
+
+        <script>
+
+            const urlParams = new URLSearchParams(window.location.search);
+            const puid = urlParams.get("puid");
+
+            let details = JSON.parse(localStorage.getItem("Request_list"));
+            let unique_detail = details.filter(e => e.uuid == puid);
+            document.querySelector("h1#title_card").innerText = unique_detail[0]["title"];
+
+            
+        </script>
 
     </body>
 
