--- a/project/inside profile/Inside_profile_1.html
+++ b/project/inside profile/Inside_profile_1.html
@@ -138,8 +138,8 @@
                             
                 <a class="" href="../payment login page/login_page.html">    
                 <button class="contribute_button">
-                <img src="../assets/images/get-money.png" alt="image" class="" height="30px" width="25px"/>
-                <b class="contribute">CONTRIBUTE</b>
+                <!-- <img src="../assets/images/get-money.png" alt="image" class="" height="30px" width="25px"/> -->
+                <b class="contribute">DONATE</b>
                 </button>
                 </a>    
                 </div>     
