--- a/project/our profile/Profile_edit_page.html
+++ b/project/our profile/Profile_edit_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html> -->
 
     <head>
         <link rel="stylesheet" href="../assets/css/edit_profile.css">
@@ -54,14 +54,14 @@
                 <hr>
                 <div class="row">
                     <!-- left column -->
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         <div class="text-center">
                             <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
                             <h6>Upload a different photo...</h6>
 
                             <input type="file" class="form-control">
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- edit form column -->
                     <div class="col-md-9 personal-info">
@@ -69,13 +69,13 @@
 
                             <h3>Personal info</h3>
 
-                            <form class="form-horizontal">
+                            <!-- <form class="form-horizontal">
                                 <div class="form-group">
                                     <label class="col-lg-3 control-label">Full name:</label>
                                     <div class="col-lg-8">
                                         <input class="form-control" type="text" 
                                             id="name" pattern="/[A-Za-z]{3,20}/" readonly required>
-                                        <!-- <input type="text" id="textInput" required> -->
+                                        <input type="text" id="textInput" required>
 
                                     </div>
                                 </div>
@@ -98,13 +98,13 @@
                                     <label class="col-md-3 control-label"></label>
                                     <div class="col-md-8">
                                         <input type="button" class="btn-primary" value="Edit">
-                                        <!-- <input type="submit" class="btn-secondary" value="submit"> -->
+                                        <input type="submit" class="btn-secondary" value="submit">
                                         <button type="submit" class="btn-secondary">Submit</button>
                                         <span></span>
                                         <input type="reset" class="btn-teritary" value="delete">
                                     </div>
                                 </div>
-                            </form>
+                            </form> -->
                         </div>
                     </div>
                 </div>
@@ -132,92 +132,9 @@
             // }
             // });
 
-        let userId = JSON.parse(localStorage.getItem('userId'));
-        let user_list = JSON.parse(localStorage.getItem("user_list"));
-
-        function login_data(e) {
-            return e.number == userId;
-        }
-        user_data = user_list.find(login_data);
-
-        document.getElementById("name").value = user_data['name'];
-        document.getElementById("email").value = user_data['email'];
-        document.getElementById("number").value = user_data['number'];
-
-        const sumbit = document.querySelector("form");
-        sumbit.addEventListener("submit", findReadonly1)
-
-        const save = document.querySelector(".btn-secondary")
-        save.addEventListener("click", saveUpdate)
-
-        function findReadonly(e) {
-            document.getElementById("name").removeAttribute("readonly");
-            // document.getElementById("name").setAttribute("required");
-            document.getElementById("email").removeAttribute("readonly");
-            // document.getElementById("email").setAttribute("required");
-
-        }
-        function findReadonly1(e) {
-            document.getElementById("name").setAttribute("readonly", "true");
-            document.getElementById("email").setAttribute("readonly", "true");
-        }
-        const editThing = document.querySelector(".btn-primary");
-        editThing.addEventListener("click", findReadonly);
-
-        function saveUpdate(e) {
-           
-            let user_name = document.getElementById("name").value.trim();
-            let user_email = document.getElementById("email").value.trim();
-
-            if(!user_name || !user_email){
-                alert("Please fill the input fields properly!!");
-            }
-            else{
-                user_data["name"] = user_name;
-            // user_data["number"] = user_number;
-            user_data["email"] = user_email;
-
-            localStorage.setItem('user_list', JSON.stringify(user_list));
-            alert("Updated successfully");
-            // window.location.href = "../Myprofile/6_profile.html"
-            // console.log(user_list);
-            e.preventDefault();
-            location.reload();
-            }
-
-        }
-
-        const dataDelete = document.querySelector(".btn-teritary");
-        dataDelete.addEventListener("click", delData)
-        function delData(e) {
-            if (confirm("Are you sure?")) {
-                let userId = JSON.parse(localStorage.getItem("userId"));
-                let user_list = JSON.parse(localStorage.getItem("user_list"));
-
-                function login_data(e) {
-                    return e.number == userId;
-                }
-
-                user_data = user_list.find(login_data);
-
-                const indexOfUser = user_list.indexOf(user_data);
-
-                user_list.splice(indexOfUser, 1);
-                localStorage.setItem('user_list', JSON.stringify(user_list));
-                // window.location.href = "../../index.html";
-            };
-        }
-
-        //user_name 
-
-        function login_data(e) {
-            return e.number == userId;
-        }
-        user_data = user_list.find(login_data);
-        document.querySelector("#user_name").innerText = user_data["name"];
-
+        
     </script>
 
 </body>
 
-</html>
+<!-- </html> -->
