--- a/project/petition/fundraiser_page_2.html
+++ b/project/petition/fundraiser_page_2.html
@@ -88,6 +88,8 @@
                         <div class="image_button">
                     
                             <input placeholder="choose an image" type="url" name="featured_image" class="choose_image  title input_option" id="customfile" accept="image/*">
+                            <!-- value="https://www.crowdkash.com/uploads/images/1638536539dhy33-5e5b8399-ec62-4be8-a635-eb24a724099a.jpeg"  -->
+                            
                         </div>    
 
                     </div>
