--- a/project/petition/fundraiser_page_3.html
+++ b/project/petition/fundraiser_page_3.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="Basic_info">
                         End date 
-                        <input placeholder id="end_date" value aria-invalid="false" class="title input_option">
+                        <input type="date" placeholder id="end_date" value aria-invalid="false" class="title input_option">
 
                     </div>
                     <div class="end_method Basic_info">
