--- a/project/payment login page/Register_page.html
+++ b/project/payment login page/Register_page.html
@@ -11,19 +11,41 @@
     </head>
 
     <header>
-        <a href="../KNfunding.html">
-            <img src="../assets/images/logo.png" alt="image" class="logo"> 
+        <a href="../../index.html">
+            <img src="../../project/assets/images/logo.png" alt="image" class="logo"> 
         </a>
         <div class="search_input_logo">
-            <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
+            <!-- <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
             <button class="search_button">
-                <img src="../assets/images/search_logo.png" alt="image" class="search_logo">
-            </button>
+                <img src="./project/assets/images/search_logo.png" alt="image"
+                    class="search_logo"></button> -->
+            <!-- <ul>
+                <li>About US</li>
+                <li>Contact US</li>
+
+            </ul>         -->
+
         </div>
         <ul class="Login_Register">
-            <li class="Login">
-                <a href="../payment login page/login_page.html" class="login_register">Login</a>
+            <li class="Login login_register dropdownn">
+                <a class="AboutUS" href="../../project/knfunding_details/BL_about_us.html" >  About us </a>
+                <!-- About us
+                <div class="dropdownn-content">
+                    <a href="#">Who we are</a>
+                    <a href="#">What we do</a>
+       
+                </div> -->
             </li>
+            <li class="Login login_register">
+               <a class="AboutUS" href="#"> Contact us</a>
+            </li>
+            <!-- <li class="Login login_register">
+                <a href="../../project/payment login page/Register_page.html" class="AboutUS">Register </a>
+            </li> -->
+            <li class="Login">
+                <a href="../../project/payment login page/login_page.html" class="login_register login_btn" id="">Login to start a fundraiser</a>
+            </li>
+
         </ul>
 
     </header>
