--- a/project/our profile/my_campaigns.html
+++ b/project/our profile/my_campaigns.html
@@ -58,6 +58,9 @@
                 <a href="./my_campaigns.html" class=" profile_head_2">
                     <li> MY CAMPAIGNS</li>
                 </a>
+                <a href="#" class=" profile_head_2">
+                    <li><b> WITHDRAW AMOUNT </b></li> 
+                </a>
                 <!-- <a href="./my_petition.html" class=" profile_head_2"><li> MY PETITIONS</li> </a> -->
                 <!-- <a  href="../../index.html" class="profile_head_2 log_out"><li><img  src="../assets/images/logout.png" alt="image" class="log_out"/></li></a> -->
     
